all fitur done
