# app/Http/Controllers/MessageController.php
@@ -17,8 +17,8 @@ class MessageController extends Controller
      * @OA\Get(
      *     path="/api/message",
      *     tags={"message"},
-     *     summary="Returns a message API response",
-     *     description="A sample message to test out the API",
+     *     summary="Return 12 latest record",
+     *     description="Endpoint latest message record",
      *     operationId="message",
      *     @OA\Response(
      *         response=200,
@@ -34,6 +34,8 @@ class MessageController extends Controller
         try {
             $result = User::select('users.name', 'users.email', 'messages.message', 'messages.id')
                 ->LeftJoin('messages', 'users.id', '=', 'messages.user_id')
+                ->orderBy('messages.created_at', 'desc')
+                ->take(12)
                 ->get();
         }catch (\Throwable $e){
             echo $e->getMessage();
@@ -44,6 +46,21 @@ class MessageController extends Controller
 
     /**
      * Store a newly created resource in storage.
+     */
+    /**
+     * @OA\Post(
+     *     path="/api/message",
+     *     tags={"message"},
+     *     summary="Create Message",
+     *     description="Endpoint to create new message",
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\MediaType(
+     *            mediaType="application/json",
+     *         )
+     *     )
+     * )
      */
     public function store(StoreMessageRequest $request)
     {
@@ -60,13 +77,40 @@ class MessageController extends Controller
     /**
      * Display the specified resource.
      */
+    /**
+     * @OA\Get(
+     *     path="/api/message/{params}",
+     *     tags={"message"},
+     *     summary="Get Message",
+     *     description="Endpoint get spesific message using key",
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\MediaType(
+     *            mediaType="application/json",
+     *         )
+     *     )
+     * )
+     */
     public function show(Message $message)
     {
         return response()->json($message);
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Patch(
+     *     path="/api/message/{params}",
+     *     tags={"message"},
+     *     summary="Update data message",
+     *     description="Endpoint to update message",
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\MediaType(
+     *            mediaType="application/json",
+     *         )
+     *     )
+     * )
      */
     public function update(UpdateMessageRequest $request, Message $message)
     {
@@ -81,7 +125,19 @@ class MessageController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *     path="/api/message/{params}",
+     *     tags={"message"},
+     *     summary="Delete data message",
+     *     description="Endpoint to delete message",
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\MediaType(
+     *            mediaType="application/json",
+     *         )
+     *     )
+     * )
      */
     public function destroy(Message $message)
     {
@@ -94,19 +150,40 @@ class MessageController extends Controller
         return response()->noContent();
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/message/search",
+     *     tags={"message"},
+     *     summary="Create users",
+     *     description="A sample user to test out the API",
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\MediaType(
+     *            mediaType="application/json",
+     *         )
+     *     )
+     * )
+     */
     public function search(SearchMessageRequest $request)
     {
        $terms = $request->params;
+       $page = $request->page ? $request->page : 1;
+
        try {
-        $result = User::select('users.name', 'users.email', 'messages.message')
-            ->LeftJoin('messages', 'users.id', '=', 'messages.user_id')
-            ->whereRaw("CONCAT_WS('', msg_users.name, msg_messages.message, msg_users.email) LIKE '%".$terms."%'")
-            ->get();
+            $query = User::query()
+                ->select('users.name', 'users.email', 'messages.message')
+                ->LeftJoin('messages', 'users.id', '=', 'messages.user_id')
+                ->whereRaw("CONCAT_WS('', msg_users.name, msg_messages.message, msg_users.email) LIKE '%".$terms."%'")
+                ->orderBy('messages.created_at', 'desc');
+
+            $data = $query->skip(($page - 1)* 8)
+                ->take(8)
+                ->get();
        }catch (\Throwable $e){
             echo $e->getMessage();
             throw new DatabaseException($e->getMessage(), $e->getCode(), $e);
        }
-
-       return response()->json($result, Response::HTTP_OK);
+       return response()->json(['data' => $data], Response::HTTP_OK);
     }
 }
